// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderContent > should render without error, filled order 1`] = `
<div>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
  >
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[12px]"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 w-[40px] h-[40px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] overflow-hidden absolute top-[0px] left-[0px]"
              data-testid="input-currency-logo-container"
              style="--c-w: 19px;"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="40"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                    style="object-fit: cover; width: 40px; height: 40px; border-radius: 40px; z-index: 1;"
                    width="40"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row-reverse w-[var(--c-w)] overflow-hidden absolute top-[0px] right-[0px]"
              data-testid="output-currency-logo-container"
              style="--c-w: 19px;"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="40"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                    style="object-fit: cover; width: 40px; height: 40px; border-radius: 40px; z-index: 1;"
                    width="40"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
              style="--c-right: -4px; --c-bottom: -4px; --c-z: 10;"
            >
              <div
                class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                data-testid="network-logo-1"
                style="--c-z: 10; width: 19.2px; height: 19.2px; border-radius: 5.76px; border-width: 1.6px;"
              >
                <div
                  class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style="object-fit: contain; width: 17px; height: 17px;"
                >
                  <div
                    class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                    style="background-image: url(ethereum-logo.png);"
                  />
                  <img
                    alt=""
                    class="css-accessibilityImage-9pa8cd"
                    draggable="false"
                    src="ethereum-logo.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          Order executed
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          Mock Date
        </span>
      </div>
    </div>
    <div
      style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px; margin-top: 28px; margin-bottom: 28px;"
    />
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[12px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] [font-weight:485] text-[24px] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
              data-testid="input-amount"
              style="--c-lh: 32px;"
            >
              252.074
               
              DAI
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
          data-testid="token-logo"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
            style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
          />
          <div
            data-testid="img-token-image"
            style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
          >
            <img
              height="36"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
              style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
              width="36"
            />
          </div>
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
            style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
              data-testid="network-logo-1"
              style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="object-fit: contain; width: 15px; height: 15px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(ethereum-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="ethereum-logo.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        fill="none"
        stroke-width="8"
        style="width: 20px; height: 20px; color: rgba(19, 19, 19, 0.35);"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 5V19"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
        <path
          d="M19 12L12 19L5 12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] [font-weight:485] text-[24px] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
              data-testid="output-amount"
              style="--c-lh: 32px;"
            >
              0.10684
               
              WETH
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
          data-testid="token-logo"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
            style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
          />
          <div
            data-testid="img-token-image"
            style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
          >
            <img
              height="36"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
              style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
              width="36"
            />
          </div>
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
            style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
              data-testid="network-logo-1"
              style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="object-fit: contain; width: 15px; height: 15px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(ethereum-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="ethereum-logo.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px; margin-top: 28px; margin-bottom: 28px;"
    />
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[8px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Rate
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <div
            aria-label="1 WETH = 2,359.34 DAI "
            class="[container-name:true] flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] bg-transparent flex-row items-center justify-start flex-wrap gap-[4px] max-w-[100%] [cursor:pointer] [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] [user-select:text] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
            data-testid="trade-price-toggle"
            role="button"
            tabindex="0"
          >
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-left"
            >
              1 WETH = 2,359.34 DAI 
            </span>
          </div>
        </span>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Network cost
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <span>
            $0
          </span>
        </span>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Transaction ID
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <a
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:535] [color:var(--stext-accent1)] no-underline [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)]"
            href="https://etherscan.io/tx/0xad7a8f73f28fd0cc16459111899dd1632164ae139fcf5281a1bced56e1ff6564"
            rel="noopener noreferrer"
            role="link"
            style="--ch-opacity: 0.6; --ca-opacity: 0.4; transition: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
            target="_blank"
          >
            0xad...6564
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderContent > should render without error, limit order 1`] = `
<div>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
  >
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[12px]"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 w-[40px] h-[40px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] overflow-hidden absolute top-[0px] left-[0px]"
              data-testid="input-currency-logo-container"
              style="--c-w: 19px;"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="40"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                    style="object-fit: cover; width: 40px; height: 40px; border-radius: 40px; z-index: 1;"
                    width="40"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row-reverse w-[var(--c-w)] overflow-hidden absolute top-[0px] right-[0px]"
              data-testid="output-currency-logo-container"
              style="--c-w: 19px;"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="40"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                    style="object-fit: cover; width: 40px; height: 40px; border-radius: 40px; z-index: 1;"
                    width="40"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
              style="--c-right: -4px; --c-bottom: -4px; --c-z: 10;"
            >
              <div
                class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                data-testid="network-logo-1"
                style="--c-z: 10; width: 19.2px; height: 19.2px; border-radius: 5.76px; border-width: 1.6px;"
              >
                <div
                  class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style="object-fit: contain; width: 17px; height: 17px;"
                >
                  <div
                    class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                    style="background-image: url(ethereum-logo.png);"
                  />
                  <img
                    alt=""
                    class="css-accessibilityImage-9pa8cd"
                    draggable="false"
                    src="ethereum-logo.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          Limit pending
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          Mock Date
        </span>
      </div>
    </div>
    <div
      style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px; margin-top: 28px; margin-bottom: 28px;"
    />
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[12px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] [font-weight:485] text-[24px] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
              data-testid="input-amount"
              style="--c-lh: 32px;"
            >
              252.074
               
              DAI
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
          data-testid="token-logo"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
            style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
          />
          <div
            data-testid="img-token-image"
            style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
          >
            <img
              height="36"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
              style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
              width="36"
            />
          </div>
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
            style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
              data-testid="network-logo-1"
              style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="object-fit: contain; width: 15px; height: 15px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(ethereum-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="ethereum-logo.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        fill="none"
        stroke-width="8"
        style="width: 20px; height: 20px; color: rgba(19, 19, 19, 0.35);"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 5V19"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
        <path
          d="M19 12L12 19L5 12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] [font-weight:485] text-[24px] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
              data-testid="output-amount"
              style="--c-lh: 32px;"
            >
              0.10684
               
              WETH
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
          data-testid="token-logo"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
            style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
          />
          <div
            data-testid="img-token-image"
            style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
          >
            <img
              height="36"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
              style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
              width="36"
            />
          </div>
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
            style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
              data-testid="network-logo-1"
              style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="object-fit: contain; width: 15px; height: 15px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(ethereum-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="ethereum-logo.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px; margin-top: 28px; margin-bottom: 28px;"
    />
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[8px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Rate
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <div
            aria-label="1 WETH = 2,359.34 DAI "
            class="[container-name:true] flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] bg-transparent flex-row items-center justify-start flex-wrap gap-[4px] max-w-[100%] [cursor:pointer] [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] [user-select:text] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
            data-testid="trade-price-toggle"
            role="button"
            tabindex="0"
          >
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-left"
            >
              1 WETH = 2,359.34 DAI 
            </span>
          </div>
        </span>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Expiry
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <span>
            Mock Date
          </span>
        </span>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Network cost
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <span>
            $0
          </span>
        </span>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Transaction ID
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <a
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:535] [color:var(--stext-accent1)] no-underline [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)]"
            href="https://etherscan.io/tx/0xad7a8f73f28fd0cc16459111899dd1632164ae139fcf5281a1bced56e1ff6564"
            rel="noopener noreferrer"
            role="link"
            style="--ch-opacity: 0.6; --ca-opacity: 0.4; transition: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
            target="_blank"
          >
            0xad...6564
          </a>
        </span>
      </div>
    </div>
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row mt-[12px]"
    >
      <button
        class="group/sbtn relative box-border flex min-h-0 min-w-0 cursor-pointer items-center justify-center border border-solid border-transparent select-none [transition:transform_100ms_cubic-bezier(0.17,0.67,0.45,1),filter_100ms_cubic-bezier(0.17,0.67,0.45,1)] active:scale-[0.98] focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-solid gap-2 rounded-12 px-3 py-2 flex-row flex-1 basis-0 self-stretch focus-visible:scale-x-[0.98] focus-visible:scale-y-[0.905] bg-surface3 hover:bg-surface3-hovered active:bg-surface3-hovered focus-visible:bg-surface3-hovered focus-visible:outline-neutral3-hovered"
        dd-action-name="Cancel limit"
        type="button"
      >
        <span
          class="text-center font-medium whitespace-nowrap [font-family:var(--sbtn-font-button)] [transition:color_100ms_cubic-bezier(0.17,0.67,0.45,1)] text-[14px] leading-[16.1px] text-neutral1 group-hover/sbtn:text-neutral1-hovered"
        >
          Cancel limit
        </span>
      </button>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px] mt-[12px] p-[12px] bg-surface2 rounded-[12px]"
    >
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        Please be aware that the execution for limits may vary based on real-time market fluctuations and Ethereum network congestion. Limits may not execute exactly when tokens reach the specified price.
      </span>
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        Canceling a limit has a network cost.
      </span>
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        <a
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:535] [color:var(--stext-accent1)] no-underline [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)]"
          href="https://support.uniswap.org/hc/en-us/articles/24300813697933"
          rel="noopener noreferrer"
          role="link"
          style="--ch-opacity: 0.6; --ca-opacity: 0.4; transition: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
          target="_blank"
        >
          Learn more
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`OrderContent > should render without error, open order 1`] = `
<div>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
  >
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[12px]"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 w-[40px] h-[40px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] overflow-hidden absolute top-[0px] left-[0px]"
              data-testid="input-currency-logo-container"
              style="--c-w: 19px;"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="40"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                    style="object-fit: cover; width: 40px; height: 40px; border-radius: 40px; z-index: 1;"
                    width="40"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row-reverse w-[var(--c-w)] overflow-hidden absolute top-[0px] right-[0px]"
              data-testid="output-currency-logo-container"
              style="--c-w: 19px;"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="40"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                    style="object-fit: cover; width: 40px; height: 40px; border-radius: 40px; z-index: 1;"
                    width="40"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
              style="--c-right: -4px; --c-bottom: -4px; --c-z: 10;"
            >
              <div
                class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                data-testid="network-logo-1"
                style="--c-z: 10; width: 19.2px; height: 19.2px; border-radius: 5.76px; border-width: 1.6px;"
              >
                <div
                  class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style="object-fit: contain; width: 17px; height: 17px;"
                >
                  <div
                    class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                    style="background-image: url(ethereum-logo.png);"
                  />
                  <img
                    alt=""
                    class="css-accessibilityImage-9pa8cd"
                    draggable="false"
                    src="ethereum-logo.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          Order pending
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          Mock Date
        </span>
      </div>
    </div>
    <div
      style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px; margin-top: 28px; margin-bottom: 28px;"
    />
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[12px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] [font-weight:485] text-[24px] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
              data-testid="input-amount"
              style="--c-lh: 32px;"
            >
              252.074
               
              DAI
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
          data-testid="token-logo"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
            style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
          />
          <div
            data-testid="img-token-image"
            style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
          >
            <img
              height="36"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
              style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
              width="36"
            />
          </div>
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
            style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
              data-testid="network-logo-1"
              style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="object-fit: contain; width: 15px; height: 15px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(ethereum-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="ethereum-logo.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        fill="none"
        stroke-width="8"
        style="width: 20px; height: 20px; color: rgba(19, 19, 19, 0.35);"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 5V19"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
        <path
          d="M19 12L12 19L5 12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] [font-weight:485] text-[24px] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
              data-testid="output-amount"
              style="--c-lh: 32px;"
            >
              0.10684
               
              WETH
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
          data-testid="token-logo"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
            style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
          />
          <div
            data-testid="img-token-image"
            style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
          >
            <img
              height="36"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
              style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
              width="36"
            />
          </div>
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
            style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
              data-testid="network-logo-1"
              style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="object-fit: contain; width: 15px; height: 15px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(ethereum-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="ethereum-logo.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px; margin-top: 28px; margin-bottom: 28px;"
    />
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[8px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Rate
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <div
            aria-label="1 WETH = 2,359.34 DAI "
            class="[container-name:true] flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] bg-transparent flex-row items-center justify-start flex-wrap gap-[4px] max-w-[100%] [cursor:pointer] [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] [user-select:text] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
            data-testid="trade-price-toggle"
            role="button"
            tabindex="0"
          >
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-left"
            >
              1 WETH = 2,359.34 DAI 
            </span>
          </div>
        </span>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Expiry
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <span>
            Mock Date
          </span>
        </span>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Network cost
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <span>
            $0
          </span>
        </span>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Transaction ID
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <a
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:535] [color:var(--stext-accent1)] no-underline [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)]"
            href="https://etherscan.io/tx/0xad7a8f73f28fd0cc16459111899dd1632164ae139fcf5281a1bced56e1ff6564"
            rel="noopener noreferrer"
            role="link"
            style="--ch-opacity: 0.6; --ca-opacity: 0.4; transition: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
            target="_blank"
          >
            0xad...6564
          </a>
        </span>
      </div>
    </div>
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row mt-[12px]"
    >
      <button
        class="group/sbtn relative box-border flex min-h-0 min-w-0 cursor-pointer items-center justify-center border border-solid border-transparent select-none [transition:transform_100ms_cubic-bezier(0.17,0.67,0.45,1),filter_100ms_cubic-bezier(0.17,0.67,0.45,1)] active:scale-[0.98] focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-solid gap-2 rounded-12 px-3 py-2 flex-row flex-1 basis-0 self-stretch focus-visible:scale-x-[0.98] focus-visible:scale-y-[0.905] bg-surface3 hover:bg-surface3-hovered active:bg-surface3-hovered focus-visible:bg-surface3-hovered focus-visible:outline-neutral3-hovered"
        dd-action-name="Cancel order"
        type="button"
      >
        <span
          class="text-center font-medium whitespace-nowrap [font-family:var(--sbtn-font-button)] [transition:color_100ms_cubic-bezier(0.17,0.67,0.45,1)] text-[14px] leading-[16.1px] text-neutral1 group-hover/sbtn:text-neutral1-hovered"
        >
          Cancel order
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`OrderContent cancel-flow states (flag on) > renders the timed-out alert with the double-gas line and Revert CTA 1`] = `
<div>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
  >
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[12px]"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 w-[40px] h-[40px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] overflow-hidden absolute top-[0px] left-[0px]"
              data-testid="input-currency-logo-container"
              style="--c-w: 19px;"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="40"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                    style="object-fit: cover; width: 40px; height: 40px; border-radius: 40px; z-index: 1;"
                    width="40"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row-reverse w-[var(--c-w)] overflow-hidden absolute top-[0px] right-[0px]"
              data-testid="output-currency-logo-container"
              style="--c-w: 19px;"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="40"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                    style="object-fit: cover; width: 40px; height: 40px; border-radius: 40px; z-index: 1;"
                    width="40"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
              style="--c-right: -4px; --c-bottom: -4px; --c-z: 10;"
            >
              <div
                class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                data-testid="network-logo-1"
                style="--c-z: 10; width: 19.2px; height: 19.2px; border-radius: 5.76px; border-width: 1.6px;"
              >
                <div
                  class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style="object-fit: contain; width: 17px; height: 17px;"
                >
                  <div
                    class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                    style="background-image: url(ethereum-logo.png);"
                  />
                  <img
                    alt=""
                    class="css-accessibilityImage-9pa8cd"
                    draggable="false"
                    src="ethereum-logo.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          Cancellation likely to fail — tap to review
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          Mock Date
        </span>
      </div>
    </div>
    <div
      style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px; margin-top: 28px; margin-bottom: 28px;"
    />
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[12px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] [font-weight:485] text-[24px] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
              data-testid="input-amount"
              style="--c-lh: 32px;"
            >
              252.074
               
              DAI
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
          data-testid="token-logo"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
            style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
          />
          <div
            data-testid="img-token-image"
            style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
          >
            <img
              height="36"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
              style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
              width="36"
            />
          </div>
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
            style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
              data-testid="network-logo-1"
              style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="object-fit: contain; width: 15px; height: 15px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(ethereum-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="ethereum-logo.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        fill="none"
        stroke-width="8"
        style="width: 20px; height: 20px; color: rgba(19, 19, 19, 0.35);"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 5V19"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
        <path
          d="M19 12L12 19L5 12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px]"
          >
            <h2
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] [font-weight:485] text-[24px] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
              data-testid="output-amount"
              style="--c-lh: 32px;"
            >
              0.10684
               
              WETH
            </h2>
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
            >
              -
            </span>
          </div>
        </div>
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
          data-testid="token-logo"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
            style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
          />
          <div
            data-testid="img-token-image"
            style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
          >
            <img
              height="36"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
              style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
              width="36"
            />
          </div>
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
            style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
          >
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
              data-testid="network-logo-1"
              style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="object-fit: contain; width: 15px; height: 15px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(ethereum-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="ethereum-logo.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px; margin-top: 28px; margin-bottom: 28px;"
    />
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[8px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Rate
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <div
            aria-label="1 WETH = 2,359.34 DAI "
            class="[container-name:true] flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] bg-transparent flex-row items-center justify-start flex-wrap gap-[4px] max-w-[100%] [cursor:pointer] [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] [user-select:text] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
            data-testid="trade-price-toggle"
            role="button"
            tabindex="0"
          >
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-left"
            >
              1 WETH = 2,359.34 DAI 
            </span>
          </div>
        </span>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Network cost
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <span>
            $0
          </span>
        </span>
      </div>
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
          data-testid="swap-li-label"
        >
          Transaction ID
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
        >
          <a
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:535] [color:var(--stext-accent1)] no-underline [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)]"
            href="https://etherscan.io/tx/0xad7a8f73f28fd0cc16459111899dd1632164ae139fcf5281a1bced56e1ff6564"
            rel="noopener noreferrer"
            role="link"
            style="--ch-opacity: 0.6; --ca-opacity: 0.4; transition: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
            target="_blank"
          >
            0xad...6564
          </a>
        </span>
      </div>
    </div>
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-start justify-between gap-[12px] mt-[16px] p-[12px] border-surface3 border-[1.3px] rounded-[20px] [border-style:solid]"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] items-center justify-center shrink-[0] w-[40px] h-[40px] bg-warning rounded-[12px]"
      >
        <svg
          fill="currentColor"
          stroke-width="8"
          style="width: 20px; height: 20px; color: rgba(19, 19, 19, 0.63);"
          viewBox="0 0 24 24"
        >
          <path
            d="M21.6074 17.1522L15.0004 4.79599C13.7204 2.40199 10.2814 2.40199 9.00042 4.79599L2.39349 17.1522C1.21949 19.3482 2.81353 22.0001 5.30853 22.0001H18.6923C21.1863 22.0001 22.7814 19.3472 21.6074 17.1522ZM11.2504 10.0001C11.2504 9.58609 11.5864 9.25009 12.0004 9.25009C12.4144 9.25009 12.7504 9.58609 12.7504 10.0001V14.0001C12.7504 14.4141 12.4144 14.7501 12.0004 14.7501C11.5864 14.7501 11.2504 14.4141 11.2504 14.0001V10.0001ZM12.0204 18.0001C11.4684 18.0001 11.0153 17.5521 11.0153 17.0001C11.0153 16.4481 11.4584 16.0001 12.0104 16.0001H12.0204C12.5734 16.0001 13.0204 16.4481 13.0204 17.0001C13.0204 17.5521 12.5724 18.0001 12.0204 18.0001Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] gap-[8px] grow-[1] shrink"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          This cancellation is taking longer than expected and is likely to fail. To try again, revert this attempt.
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          If your original cancellation goes through after all, this transaction will still be submitted and will cost gas.
        </span>
        <div
          class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row mt-[4px]"
        >
          <button
            class="group/sbtn relative box-border flex min-h-0 min-w-0 cursor-pointer items-center justify-center border border-solid border-transparent select-none [transition:transform_100ms_cubic-bezier(0.17,0.67,0.45,1),filter_100ms_cubic-bezier(0.17,0.67,0.45,1)] active:scale-[0.98] focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-solid gap-2 rounded-12 px-3 py-2 flex-row flex-1 basis-0 self-stretch focus-visible:scale-x-[0.98] focus-visible:scale-y-[0.905] bg-accent1 hover:bg-accent1-hovered active:bg-accent1-hovered focus-visible:bg-accent1-hovered focus-visible:outline-accent1-hovered"
            dd-action-name="Revert cancellation"
            type="button"
          >
            <span
              class="text-center font-medium whitespace-nowrap [font-family:var(--sbtn-font-button)] [transition:color_100ms_cubic-bezier(0.17,0.67,0.45,1)] text-[14px] leading-[16.1px] text-white"
            >
              Revert cancellation
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[4px] mt-[12px] p-[12px] bg-surface2 rounded-[12px]"
    >
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        Please be aware that the execution for limits may vary based on real-time market fluctuations and Ethereum network congestion. Limits may not execute exactly when tokens reach the specified price.
      </span>
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        Canceling a limit has a network cost.
      </span>
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[12px] [line-height:16px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        <a
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:535] [color:var(--stext-accent1)] no-underline [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)]"
          href="https://support.uniswap.org/hc/en-us/articles/24300813697933"
          rel="noopener noreferrer"
          role="link"
          style="--ch-opacity: 0.6; --ca-opacity: 0.4; transition: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
          target="_blank"
        >
          Learn more
        </a>
      </span>
    </div>
  </div>
</div>
`;
